made some small changes to display